[tool.poetry]
name = "strapp"
version = "0.4.1"
description = ""
authors = []
packages = [{ include = "strapp", from = "src" }]
include = ["src/strapp/py.typed"]

[tool.poetry.dependencies]
python = "^3.8"

typing_extensions = { version = ">=3.10", python = "<=3.10" }

click = { version = "*", optional = true }
flask = { version = "*", optional = true }
sentry-sdk = { version = "*", optional = true }
requests = { version = "*", optional = true }
sqlalchemy = { version = ">=1.4", optional = true, extras = ["mypy"] }
flask_reverse_proxy = { version = "*", optional = true }
setuplog = { version = ">=0.2.2", optional = true }
backoff = { version = "*", optional = true }
datadog = { version = "*", optional = true }
dramatiq = { version = "*", optional = true, extras = ["redis"] }
redis = { version = "^4.3.4", optional = true }

[tool.poetry.dev-dependencies]
bandit = "^1.6.2"
black = "22.3.0"
coverage = "*"
flake8 = "^3.7.9"
isort = "^4.3.21"
mypy = "^0.991"
pydocstyle = "^4.0.1"
pytest = "^6.0"
pytest-mock-resources = { extras = ["docker"], version = "^2.4.3" }
requests = "^2.26.0"
pytest-alembic = ">=0.6.0"
types-dataclasses = "^0.6.2"
types-requests = "^2.26.3"
types-contextvars = "^2.4.0"
freezegun = "^1.2.1"
responses = "*"

[tool.poetry.extras]
click = ["click", "dataclasses"]
sqlalchemy = ["sqlalchemy"]
sentry = ["requests", "sentry-sdk"]
flask = ["flask", "flask_reverse_proxy", "dataclasses"]
http = ["backoff", "setuplog"]
datadog = ["datadog"]
dramatiq = ["dramatiq", "redis"]

[tool.black]
line_length = 100

[tool.isort]
default_section = 'FIRSTPARTY'
include_trailing_comma = true
indent = '    '
length_sort = false
line_length = 100
multi_line_output = 3
order_by_type = false
known_first_party = 'tests'
known_standard_library = 'dataclasses'
use_parentheses = true

[tool.mypy]
strict_optional = true
ignore_missing_imports = true
warn_unused_ignores = true
incremental = true
plugins = ['strapp.sqlalchemy.mypy', 'sqlalchemy.ext.mypy.plugin']

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
